# RatRod-rs

./: Cargo.toml  README.md  model_test.json
src/: lib.rs  main.rs  material.rs  model.rs  node.rs  section.rs
src/elements/: beam.rs  mod.rs  truss.rs
