[package]
name        =     "Irony"
version     =     "0.1.0"
edition     =     "2021"
authors     =     ["Kevin Coetsier"]
description =     "An FEM implementation written in Rust"
readme      =     "README.md"
repository  =     "https://github.com/KevCts/Irony"
license     =     "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
