[package]
name        =     "RatRod.rs"
version     =     "0.1.0"
edition     =     "2021"
authors     =     ["Kevin Coetsier"]
description =     "An FEM implementation written in Rust"
readme      =     "README.md"
repository  =     "https://github.com/KevCts/RatRod.rs"
license     =     "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dylib = "0.0.3"
more-asserts = "0.3.1"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
serde_json_any_key = "2.0.0"
sparse_matrix = "0.6.0"
